--- a/terms.html
+++ b/terms.html
@@ -1,4 +1,4 @@
-<small>Last modified: 8th September 2016, version 5</small>
+<small>Last modified: 6th February 2018, version 6</small>
 <h3>Welcome to GraphHopper</h3>
 Thanks for using our products and services!
 
@@ -7,7 +7,7 @@ The purpose of this website, <a href="https://graphhopper.com">graphhopper.com</
 GraphHopper GmbH ("GraphHopper") is to provide routing products and services.
 The GraphHopper Directions API ("Directions API") is offered.
 At <a href="https://graphhopper.com/maps">graphhopper.com/maps</a> ("GraphHopper Maps")
-driving directions are provided to the end users for demonstrational purposes of the Directions API.
+driving directions are provided to the end users for demonstrative purposes of the Directions API.
 
 By using the Site, the Directions API, GraphHopper Maps or any services provided on the Site (collectively, "Services"),
 you acknowledge that you have read, understood, and agree to be bound by the following
@@ -43,13 +43,12 @@ You must adhere to all policies posted within the Services and
 all accompanying documentation. All such policies are hereby incorporated by reference into these Terms.
 
 <b>6.</b>
-In order to use the Directions API you must agree to the Terms. You can accept the Terms by:
+In order to use the Services you must agree to the Terms. You can accept the Terms by:
 
 1. clicking to accept or agree to the Terms when you register for a new account to the Directions API; or
 
 2. using the Site or GraphHopper Maps. In this case, you understand and agree that GraphHopper
-will treat your use of GraphHopper Maps
-as acceptance of the Terms from that point onwards.
+will treat your use of GraphHopper Maps as acceptance of the Terms from that point onwards.
 
 <b>7.</b> You represent that you have full power, capacity and authority to accept these Terms. If you are accepting on
 behalf of your employer or another entity, you represent that you have full legal authority to bind your
@@ -66,12 +65,12 @@ overburden, or impair the Services or interfere with any other party's use and e
 Recognizing the global nature of the Internet, you agree to comply with all local rules regarding online
 conduct and acceptable content.
 
-<b>10.</b> The Site allows you to access and view a variety of content, including but not limited to routing and
+<b>10.</b> The Site allows you to access a variety of content, including but not limited to routing and
 and other related information provided by GraphHopper and its licensors.
 You understand and agree to the following with respect to all content made available by or through the Site:
 <ol>
  	<li>You understand that routing data and related content are provided for planning purposes only.
-You may find that events may cause the actual information to differ from the map results.
+You may find that events may cause the actual information to differ from map results of other providers.
 You should exercise judgment in your use of all content made available by or through the Site.</li>
  	<li>Certain content is provided under license from third parties, and is subject to copyright and other
 intellectual property rights owned by or licensed to such third parties.
@@ -92,15 +91,9 @@ written consent of GraphHopper. Any authorized transferee shall agree in writing
 conditions of these Terms. In no event may you copy, rent, time-share, sublicense, transfer, sell or otherwise
 dispose the Directions API on a temporary or permanent basis.
 <h3>3. Attribution</h3>
-You understand that packages without the white-label option
-require You to display GraphHopper attribution, and all packages require
-<a href="https://www.openstreetmap.org/copyright">OpenStreetMap attribution</a> and
-You agree to comply with this requirement.
+You understand that packages without the white label option require You to display GraphHopper attribution. All packages require <a href="https://www.openstreetmap.org/copyright">OpenStreetMap attribution</a> or an agreement to the <a href="https://www.graphhopper.com/tomtom-end-user-license-agreement/">TomTom EULA</a> or both, depending on your package. You agree to comply with this requirement.
 
-You agree to provide attribution when required, as outlined in the
-<a href="https://github.com/graphhopper/web-api/#attribution">GraphHopper documentation</a>.
-You understand that a subscription to a GraphHopper package that offers "white-labeled" services
-does not waive your responsibility to provide attribution when required or requested.
+You agree to provide attribution when required, as outlined in the <a href="https://github.com/graphhopper/web-api/#attribution">GraphHopper documentation</a>. You understand that a subscription to a GraphHopper package with the white label option does not waive your responsibility to provide attribution when required or requested.
 
 All other materials displayed or performed on the Site, including, but not limited to text, graphics, maps, logos,
 tools, photographs, images, software or source code, audio and video, and animations are the
@@ -125,7 +118,7 @@ To proxy and redistribute the Directions API you need a custom package and agree
 The results may be temporarily cached on the client side (e.g. browser or mobile app).
 Scraping or any mass download is prohibited, if not otherwise stated in your package.</li>
  	<li><b>Restrictions on the Types of Applications</b>.
-You are allowed to use the Directions API without showing a map. You can develop any kind
+You are allowed to use the Directions API with and without showing a map. You can develop any kind
 of software, including navigation software.</li>
  	<li><b>Responsibility</b>.
 You are solely responsible for any and all acts and omissions that occur under your account or password,
@@ -140,9 +133,10 @@ person;
 communication;
 (iv) export, re-export, or permit downloading of any content in violation of any export or import law, regulation, or
 restriction of Germany and its agencies or authorities, or without all required approvals, licenses, or exemptions;
-(v) interfere, disrupt, or attempt to gain unauthorized access to other accounts or any other computer network;
+(v) interfere, disrupt, or attempt to gain unauthorized access to other accounts or any other computer network; or
 (vi) disseminate, store, or transmit viruses, trojan horses, or any other malicious code or program; or
-(vii) engage in any other activity deemed by GraphHopper to be in conflict with the spirit or intent of these Terms.</li>
+(vii) engage in any other activity deemed by GraphHopper to be in conflict with the spirit or intent of these Terms; or
+(viii) operate dangerous businesses such as emergency services, where the use or failure of the Services could lead to death, personal injury or significant property damage.</li>
  	<li><b>Limits</b>.
 If your application which is using the Directions API generates a high volume of transactions,
 GraphHopper reserves the right to set transaction limits, as described in the Documentation <a href="https://graphhopper.com/api/1/docs/">here</a>.
@@ -150,13 +144,8 @@ GraphHopper also reserves the right to set other usage policies in the Documenta
 If you want to engage in use outside these transaction limits or usage policies, please contact
 GraphHopper for information on custom packages to address your needs.</li>
  	<li><b>Your Implementation</b>.
-If you develop a Directions API Implementation for use by other users, you must:<br/>
-(a) attribute GraphHopper for certain packages as outlined above and also OpenStreetMap;<br/>
-(b) display to the users of your Directions API Implementation the link to this GraphHopper's Terms of
-Services as described in the Directions API Documentation;<br/>
-(c) explicitly state in your Directions API Implementation's terms of use that, by using your Directions API
-Implementation, your users are agreeing to be bound by GraphHopper's Terms of Use; and<br/>
-(d) protect the privacy and legal rights of those users.</li>
+(a) you may not allow your end users or other third parties to use the Directions API in any way that would be a violation of these Terms if done by you, and you agree to take reasonable efforts to prevent such use. You agree to promptly notify GraphHopper in writing if you become aware of any misappropriation or unauthorized use of the Directions API.
+(b) protect the privacy and legal rights of those users.</li>
 </ol>
 These Terms shall benefit GraphHopper and its successors and assigns. You may not, or permit any third party to,
 modify, adapt, translate, create derivative works from, reverse engineer, decompile, disassemble, or otherwise
@@ -214,9 +203,9 @@ GraphHopper makes an online manual for the use of the services available. GraphH
 own discretion, whether changes to the Services necessitate an addition or revision to the online manual.
 <h3>12. Use of brand names, names and logos</h3>
 The Subscriber gives permission for GraphHopper to use company identifiers, names, brand names and
-logos of the Subscriber ("Signs") pursuant to the following provisions. GraphHopper is permitted
-to use Signs for the purposes of presentation and advertisement. In particular, GraphHopper is
-permitted to use the Signs for the purpose of presentation and advertisement on the company
+logos of the Subscriber ("Signs") pursuant to the following provisions in case of a package without the white label option.
+GraphHopper is permitted to use Signs for the purposes of presentation and advertisement. In particular,
+GraphHopper is permitted to use the Signs for the purpose of presentation and advertisement on the company
 website, as well as other GraphHopper-run websites, portals, in brochures, flyers, newspapers,
 magazines, for exhibitions and events of any kind. The Subscriber gives these permissions to
 GraphHopper free of charge. The Subscriber may withdraw permission at any time in writing,
