--- a/terms.html
+++ b/terms.html
@@ -1,4 +1,4 @@
-<small>Last modified: 6th February 2018, version 6</small>
+<small>Last modified: 19th March 2018, version 7</small>
 <h3>Welcome to GraphHopper</h3>
 Thanks for using our products and services!
 
@@ -114,7 +114,7 @@ Only one <i>Free</i>-package is allowed per user.All none-<i>Free</i> packages r
 where the price in euro or US dollar depends on the contract length (1 or 12 months) and
 the package type (basic, standard, premium or custom).</li>
  	<li><b>Proxying and Caching</b>.
-To proxy and redistribute the Directions API you need a custom package and agreement with GraphHopper.
+To redistribute the Directions API you need a custom package and agreement with GraphHopper.
 The results may be temporarily cached on the client side (e.g. browser or mobile app).
 Scraping or any mass download is prohibited, if not otherwise stated in your package.</li>
  	<li><b>Restrictions on the Types of Applications</b>.
