added 4 new services that are used under special conditions

--- a/privacy.html
+++ b/privacy.html
@@ -17,9 +17,6 @@ information at any time, unless required by law, and use this information intern
 <p>
 If you contact us via our contact form or Email the data is stored in our 
 <a href="https://centralstationcrm.com/privacy">CRM system</a> hosted in Germany.
-</p>
-
-<p>
 If you contact us via Email the emails are stored at our Email-provider
 <a href="https://www.df.eu/int/datenschutz/">DomainFactory</a> hosted in Germany.
 </p>
@@ -59,6 +56,13 @@ improve performance and usability of our API.
 Our customers have the choice to use a proxy to enhance the privacy of their
 users.
 </p>
+
+<p>
+Certain Geocoding requests with an external provider go to 
+<a href="https://geocoder.opencagedata.com/gdpr">OpenCageData</a> and
+<a href="https://www.gisgraphy.com/privacy">Gisgraphy</a>.
+</p>
+
 <p>
 Customers can request their personal information as well as requesting the
 deletion of them via dashboard message or Email. Personal information like
@@ -71,7 +75,16 @@ is not stored only processed via our payment provider. We use the subscription p
 (monthly recurring invoices), the payment provider <a href="http://www.heidelpay.com/payment/">Heidelpay</a> and the
 payment networks Visa, Mastercard and American Express depending on the customers its credit card type.</p>
 <p>Passwords are stored encrypted and we take precautions to protect your information. When you exchange information via our Services, your information 
-is protected both, online via HTTPS, PFS and similar techniques, as well as offline due to modern and secure datacenters. </p>
+is protected both, online via HTTPS, PFS and similar techniques, as well as offline due to modern and secure datacenters. 
+</p>
+
+<p>
+For invoice processing we use services from <ahref="http://www.rfe.gmbh">R/F/E</a> and 
+<a href="https://www.buchhaltungsbutler.de/datenschutzbestimmungen/">Buchhaltungsbutler</a>
+and Billwerk uses<a href="https://www.mailjet.com/gdpr/">Mailjet</a> to send invoices.
+</p>
+
 </div>
 	
 </div>
+
