added hetzner explicitly

--- a/privacy.html
+++ b/privacy.html
@@ -39,12 +39,12 @@ to serve the map tiles.
 time and company name. The purpose is to send technical emails, support
 contact, privacy or term changes, newsletter (only if agreed), the obligation to prove the business nature of the
 registration request and to reduce likelihood of misusage of credit card information at a later stage.
-To avoid newsletter Emails (if you want to request deletion of your
-account) you can unsubscribe via a link provided at the
+To avoid newsletter Emails or if you want to request deletion of your
+account you can unsubscribe via a link provided at the
 end of every newsletter or send us a message via the dashboard.
 </p>
 <p>
-We process the API requests on rented servers hosted in Germany. As the
+We process the API requests on rented servers from <a href="https://wiki.hetzner.de/index.php/Datenschutz-FAQ/en">Hetzner</a> hosted in Germany. As the
 geographic coordinates might be personal information we take special care.
 </p>
 
@@ -79,9 +79,9 @@ is protected both, online via HTTPS, PFS and similar techniques, as well as offl
 </p>
 
 <p>
-For invoice processing we use services from <ahref="http://www.rfe.gmbh">R/F/E</a> and 
+For invoice processing we use services from <a href="http://www.rfe.gmbh">R/F/E</a> and 
 <a href="https://www.buchhaltungsbutler.de/datenschutzbestimmungen/">Buchhaltungsbutler</a>
-and Billwerk uses<a href="https://www.mailjet.com/gdpr/">Mailjet</a> to send invoices.
+and Billwerk uses <a href="https://www.mailjet.com/gdpr/">Mailjet</a> to send invoices.
 </p>
 
 </div>
