--- a/privacy.html
+++ b/privacy.html
@@ -5,7 +5,7 @@
 <p><small>Last modified: Mar 19, 2018</small></p>
 <p>The GraphHopper GmbH is the sole owner of the information collected on this site. We do not collect, store, or share any personally identifiable 
 user data, except what you voluntarily give to us via email, up on registration or other direct contact from you.
-We'll not sell or rent this information to anyone.</p>
+We do not sell or rent this information to anyone.</p>
 
 <h2>GraphHopper Website and Documentation</h2>
 <p>For web analytics we use <a href="https://matomo.org/">Matomo (piwik)</a> where we do not store the full IP address but only 2 bytes like 192.168.xxx.xxx,
