--- a/privacy.html
+++ b/privacy.html
@@ -72,7 +72,7 @@ email can be changed in the dashboard or requested via the dashboard.
 and to fulfill customer orders. It is collected, processed, and held in a secure environment that only authorized persons can access. Credit card information
 is not stored at all and only processed via our payment provider. We use the subscription provider <a href="https://billwerk.com/">billwerk</a>
 (monthly recurring invoices), the payment provider <a href="http://www.heidelpay.com/payment/">Heidelpay</a> and the
-payment networks Visa, Mastercard and American Express depending on the customers its credit card type.</p>
+payment networks Visa, Mastercard and American Express depending on the type of credit card.</p>
 <p>Passwords are stored encrypted and we take precautions to protect your information. When you exchange information via our Services, your information 
 is protected both, online via HTTPS, PFS and similar techniques, as well as offline due to modern and secure datacenters. 
 </p>
