--- a/privacy.html
+++ b/privacy.html
@@ -74,13 +74,13 @@ is not stored at all and only processed via our payment provider. We use the sub
 (monthly recurring invoices), the payment provider <a href="http://www.heidelpay.com/payment/">Heidelpay</a> and the
 payment networks Visa, Mastercard and American Express depending on the type of credit card.</p>
 <p>Passwords are stored encrypted and we take precautions to protect your information. When you exchange information via our Services, your information 
-is protected both, online via HTTPS, PFS and similar techniques, as well as offline due to modern and secure datacenters. 
+is protected online (via HTTPS, PFS and similar techniques) as well as offline due to modern and secure datacenters.
 </p>
 
 <p>
-For invoice processing we use services from <a href="http://www.rfe.gmbh">R/F/E</a> and 
-<a href="https://www.buchhaltungsbutler.de/datenschutzbestimmungen/">Buchhaltungsbutler</a>
-and Billwerk uses <a href="https://www.mailjet.com/gdpr/">Mailjet</a> to send invoices.
+For invoice processing and accouting we collaborate with <a href="http://www.rfe.gmbh">R/F/E</a> and
+<a href="https://www.buchhaltungsbutler.de/datenschutzbestimmungen/">Buchhaltungsbutler</a>.
+Billwerk uses <a href="https://www.mailjet.com/gdpr/">Mailjet</a> to send invoices.
 </p>
 
 </div>
