stored in Cologne and Strassbourg, still falls under German privacy law, remove sentence to avoid confusion

--- a/privacy.html
+++ b/privacy.html
@@ -18,7 +18,7 @@ information at any time, unless required by law.
 If you contact us via our contact form, the data is stored in our
 <a href="https://centralstationcrm.com/privacy">CRM system</a> hosted in Germany.
 If you contact us via email, the emails are stored at our email-provider
-<a href="https://www.df.eu/int/datenschutz/">DomainFactory</a> hosted in Germany.
+<a href="https://www.df.eu/int/datenschutz/">DomainFactory</a>.
 </p>
 
 <h3>GraphHopper Maps</h3>
@@ -86,4 +86,3 @@ Billwerk uses <a href="https://www.mailjet.com/gdpr/">Mailjet</a> to send invoic
 </div>
 	
 </div>
-
