--- a/privacy.html
+++ b/privacy.html
@@ -57,7 +57,8 @@ users.
 </p>
 
 <p>
-Customers can choose between different geocoding providers. If "opencagedata" is selected, requests go to
+Customers can choose between different geocoding providers. If "opencagedata"
+or "nominatim" is selected, requests go to
 <a href="https://geocoder.opencagedata.com/gdpr">OpenCageData</a>. If "gisgraphy" is selected, requests go to
 <a href="https://www.gisgraphy.com/privacy">Gisgraphy</a>.
 </p>
