--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style>
   </head>
   <body>
-    <redoc spec-url='https://github.com/graphhopper/directions-api/blob/master/swagger.json'></redoc>
+    <redoc spec-url='https://raw.githubusercontent.com/graphhopper/directions-api/master/swagger.json'></redoc>
     <script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"> </script>
   </body>
 </html>
